--- a/first.html
+++ b/first.html
@@ -1,18 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>My first Web Page</title>
         <style>
             html{
                 font-size: 22px
             }
             body{
-                background-color: #333;
+                background-color: red;
                 color: whitesmoke;
             }
         </style>
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <p>This is my first webpage.</p>
+        <h1>About Us</h1>
+        <p>The Official Formula Student Racing Team of The Hong Kong University of Science and Technology.</p>
     </body>
 </html>
