--- a/first.html
+++ b/first.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My first Web Page</title>
+        <title>HKUST Red Bird Racing (EVRT)</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
             html{
                 font-size: 22px
@@ -11,10 +13,37 @@
                 background-color: red;
                 color: whitesmoke;
             }
+            h1{
+                text-align: center;
+            }
+            h3{
+                text-align: center;
+            }
         </style>
     </head>
     <body>
-        <h1>About Us</h1>
+        <h1>About us</h1>
+        <hr>
         <p>The Official Formula Student Racing Team of The Hong Kong University of Science and Technology.</p>
+        <h3>Who are we?</h3>
+        <hr>
+        <p>Originated as an experimental project in 2017, Red Bird Racing (EVRT) became the official student racing team of HKUST. The team actively participates in Formula Students, one of the most established engineering competitions in the world. Through this competition, the team aims to develop the knowledge and skills of aspiring engineers to succeed in their careers.</p>
+        <h3>What is our goal?</h3>
+        <hr>
+        <p>Our main goal is to compete in Formula Student United Kingdom 2024 (FSUK 2024), Class 1.
+            Throughout the development, we aim to provide a platform for students to learn by doing and step out of their comfort zone, so as to explore what they are truly capable of and mature further.</p>
+        <h3>Get in touch</h3>
+        <hr>
+        <p>Want to know more about us? Having any questions? Feel free to contact us via email and social media.</p>							<div id="map"></div>
+        <ul class="contact">
+            <p><i style="font-size:24px" class="fa">&#xf041;</i><a href="https://www.google.com.hk/maps/place/HKUST/@22.3368027,114.2650534,17z/data=!3m1!4b1!4m5!3m4!1s0x34040545075eaaf9:0x5d48c86eccf61007!8m2!3d22.3367978!4d114.2672421?hl=zh-TW" target="_blank">
+                The Hong Kong University of Science and Technology,<br />
+                Clear Water Bay, Kowloon, Hong Kong</a><br /></p>
+            <span>&#9993;</span><a href="mailto:redbirdracinghkustevrt@gmail.com">redbirdracinghkustevrt@gmail.com</a></li>
+            <p><li style="font-size:24px" class="fa">&#xf08c;</li><a href="https://hk.linkedin.com/company/hkust-red-bird-racing-evrt" target="_blank">Check out our linkedin</a></p>
+            <p><li style="font-size:24px" class="fa">&#xf09a;</li><a href="https://www.facebook.com/HKUST-Red-Bird-Racing-EVRT-102382105550032/" target="_blank">Follow our facebook</a></p>
+            <p><li style="font-size:24px" class="fa">&#xf16d;</li><a href="https://www.instagram.com/red.bird.racing_hkust/" target="_blank">Follow our instagram</a></p>
+            <p><li style="font-size:24px" class="fa">&#xf16a;</li><a href="https://www.youtube.com/channel/UCkfSiL8lR4T82OY4_Po6ZTA/featured" target="_blank">Subscribe our youtube channel</a></p>
+        </ul>        
     </body>
 </html>
